# spatialrc

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: pilot_experiment.py
src/spatialrc/: __init__.py  adapters.py  criticality.py  delayed_reservoir.py  geometry.py  sernn.py  torch_reservoir.py
src/spatialrc/backend/: __init__.py  base.py  cpu.py  cupy.py  jax.py  pytorch.py
src/spatialrc/viz/: __init__.py  criticality.py  embedding3d.py  matrices.py  style.py
tests/: test_backend.py  test_delayed_reservoir.py  test_geometry.py  test_viz_and_sernn.py
